# allergo_grasping

./: CMakeLists.txt  README.md  make_rel.sh  readme_fan.md
grasp/: CDatabaseRedisClient.cpp  CDatabaseRedisClient.hpp  CMakeLists.txt  hand.urdf  main.cpp  position_opt.py  test.py  visualization.py
